Fix decryption of indexed (list) properties.
When decrypting indexed properties all items of the list with at
least one encrypted item should be copied to the new property-source but not the other lists.

When searching for properties relaxed-binding should be considered.

Signed-off-by: kvmw <mshamsi@broadcom.com>